--- a/03day/01Timer/01Timer.vcxproj
+++ b/03day/01Timer/01Timer.vcxproj
@@ -84,24 +84,34 @@
     <ClCompile Include="src\channel\StdinC.cpp" />
     <ClCompile Include="src\channel\StdoutC.cpp" />
     <ClCompile Include="src\channel\TimeoutC.cpp" />
-    <ClCompile Include="src\CmdMsg.cpp" />
+    <ClCompile Include="src\channel\TimeoutDispOC.cpp" />
+    <ClCompile Include="src\channel\TimeoutDispIC.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\protocol\CmdMsg.cpp" />
     <ClCompile Include="src\protocol\CmdPrsP.cpp" />
+    <ClCompile Include="src\protocol\TimeoutDisprP.cpp" />
+    <ClCompile Include="src\protocol\TimeoutMsg.cpp" />
     <ClCompile Include="src\protocol\TimeoutP.cpp" />
     <ClCompile Include="src\role\EchoR.cpp" />
     <ClCompile Include="src\role\ExitR.cpp" />
     <ClCompile Include="src\role\OMngR.cpp" />
+    <ClCompile Include="src\role\TimeoutTaskR.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\channel\StdinC.h" />
     <ClInclude Include="inc\channel\StdoutC.h" />
     <ClInclude Include="inc\channel\TimeoutC.h" />
-    <ClInclude Include="inc\CmdMsg.h" />
+    <ClInclude Include="inc\channel\TimeoutDispOC.h" />
+    <ClInclude Include="inc\channel\TimeoutDispIC.h" />
+    <ClInclude Include="inc\protocol\CmdMsg.h" />
     <ClInclude Include="inc\protocol\CmdPrsP.h" />
+    <ClInclude Include="inc\protocol\TimeoutDisprP.h" />
+    <ClInclude Include="inc\protocol\TimeoutMsg.h" />
     <ClInclude Include="inc\protocol\TimeoutP.h" />
     <ClInclude Include="inc\role\EchoR.h" />
     <ClInclude Include="inc\role\ExitR.h" />
     <ClInclude Include="inc\role\OMngR.h" />
+    <ClInclude Include="inc\role\TimeoutTaskR.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
