--- a/03day/02TimeWheel/02TimeWheel.vcxproj
+++ b/03day/02TimeWheel/02TimeWheel.vcxproj
@@ -59,7 +59,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
-    <RemoteRootDir>~/c++/09项目二/03day</RemoteRootDir>
+    <RemoteRootDir>~/projects</RemoteRootDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -78,7 +78,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)bin</OutDir>
     <IntDir>$(ProjectDir)obj</IntDir>
-    <TargetExt />
+    <TargetExt>.out</TargetExt>
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="src\channel\StdinC.cpp" />
