--- a/03day/02TimeWheel/02TimeWheel.vcxproj.filters
+++ b/03day/02TimeWheel/02TimeWheel.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClCompile Include="src\protocol\TimeoutP.cpp">
       <Filter>src\protocol</Filter>
     </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
