--- a/03day/04TimeWheel/04TimeWheel.vcxproj
+++ b/03day/04TimeWheel/04TimeWheel.vcxproj
@@ -35,9 +35,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{c5cd75f9-554a-462a-8062-254c3eefd767}</ProjectGuid>
+    <ProjectGuid>{442f5047-ed2f-4012-8aa6-95cde5cc27b4}</ProjectGuid>
     <Keyword>Linux</Keyword>
-    <RootNamespace>_03TimeWheel</RootNamespace>
+    <RootNamespace>_04TimeWheel</RootNamespace>
     <MinimumVisualStudioVersion>15.0</MinimumVisualStudioVersion>
     <ApplicationType>Linux</ApplicationType>
     <ApplicationTypeRevision>1.0</ApplicationTypeRevision>
@@ -59,7 +59,6 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
-    <RemoteRootDir>~/c++/09项目二/03day</RemoteRootDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -81,7 +80,37 @@
     <TargetExt />
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClInclude Include="inc\channel\StdinC.h" />
+    <ClInclude Include="inc\channel\StdoutC.h" />
+    <ClInclude Include="inc\channel\TimeoutC.h" />
+    <ClInclude Include="inc\channel\TimeoutDispIC.h" />
+    <ClInclude Include="inc\channel\TimeoutDispOC.h" />
+    <ClInclude Include="inc\protocol\CmdMsg.h" />
+    <ClInclude Include="inc\protocol\CmdPrsP.h" />
+    <ClInclude Include="inc\protocol\TimeoutDisprP.h" />
+    <ClInclude Include="inc\protocol\TimeoutMsg.h" />
+    <ClInclude Include="inc\protocol\TimeoutP.h" />
+    <ClInclude Include="inc\role\EchoR.h" />
+    <ClInclude Include="inc\role\ExitR.h" />
+    <ClInclude Include="inc\role\OMngR.h" />
+    <ClInclude Include="inc\role\TimeoutTaskR.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\channel\StdinC.cpp" />
+    <ClCompile Include="src\channel\StdoutC.cpp" />
+    <ClCompile Include="src\channel\TimeoutC.cpp" />
+    <ClCompile Include="src\channel\TimeoutDispIC.cpp" />
+    <ClCompile Include="src\channel\TimeoutDispOC.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\protocol\CmdMsg.cpp" />
+    <ClCompile Include="src\protocol\CmdPrsP.cpp" />
+    <ClCompile Include="src\protocol\TimeoutDisprP.cpp" />
+    <ClCompile Include="src\protocol\TimeoutMsg.cpp" />
+    <ClCompile Include="src\protocol\TimeoutP.cpp" />
+    <ClCompile Include="src\role\EchoR.cpp" />
+    <ClCompile Include="src\role\ExitR.cpp" />
+    <ClCompile Include="src\role\OMngR.cpp" />
+    <ClCompile Include="src\role\TimeoutTaskR.cpp" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
