--- a/03day/04TimeWheel/04TimeWheel.vcxproj
+++ b/03day/04TimeWheel/04TimeWheel.vcxproj
@@ -112,7 +112,11 @@
     <ClCompile Include="src\role\OMngR.cpp" />
     <ClCompile Include="src\role\TimeoutTaskR.cpp" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Link>
+      <LibraryDependencies>zinx</LibraryDependencies>
+    </Link>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
