优化debug调试信息

--- a/03day/02TimeWheel/02TimeWheel.vcxproj
+++ b/03day/02TimeWheel/02TimeWheel.vcxproj
@@ -76,8 +76,8 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(ProjectDir)bin</OutDir>
-    <IntDir>$(ProjectDir)obj</IntDir>
+    <OutDir>$(ProjectDir)bin\</OutDir>
+    <IntDir>$(ProjectDir)obj\</IntDir>
     <TargetExt>
     </TargetExt>
   </PropertyGroup>
