--- a/04day/01GameServer/01GameServer.vcxproj
+++ b/04day/01GameServer/01GameServer.vcxproj
@@ -81,7 +81,15 @@
     <TargetExt />
   </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="src\channel\GameC.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\protocol\GameP.cpp" />
+    <ClCompile Include="src\role\GameR.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="inc\channel\GameC.h" />
+    <ClInclude Include="inc\protocol\GameP.h" />
+    <ClInclude Include="inc\role\GameR.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
