--- a/05day/03代理模式实现消息存储和操作/03代理模式实现消息存储和操作.vcxproj
+++ b/05day/03代理模式实现消息存储和操作/03代理模式实现消息存储和操作.vcxproj
@@ -43,6 +43,7 @@
     <ApplicationTypeRevision>1.0</ApplicationTypeRevision>
     <TargetLinuxPlatform>Generic</TargetLinuxPlatform>
     <LinuxProjectType>{2238F9CD-F817-4ECC-BD14-2524D2669B35}</LinuxProjectType>
+    <ProjectName>03代理模式实现消息存储和操作</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'" Label="Configuration">
@@ -59,6 +60,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
+    <RemoteRootDir>~/c++/09项目二/05day</RemoteRootDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -74,9 +76,40 @@
   <ImportGroup Label="Shared" />
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(ProjectDir)bin\</OutDir>
+    <IntDir>$(ProjectDir)obj\</IntDir>
+    <TargetExt />
+  </PropertyGroup>
   <ItemGroup>
+    <ClInclude Include="inc\channel\GameC.h" />
+    <ClInclude Include="inc\channel\GameCF.h" />
+    <ClInclude Include="inc\protocol\GameMsg.h" />
+    <ClInclude Include="inc\protocol\GameMsg.protoc.pb.h" />
+    <ClInclude Include="inc\protocol\GameMsgF.h" />
+    <ClInclude Include="inc\protocol\GameMsgData.h" />
+    <ClInclude Include="inc\protocol\GameMsgList.h" />
+    <ClInclude Include="inc\protocol\GameP.h" />
+    <ClInclude Include="inc\role\GameR.h" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemGroup>
+    <ClCompile Include="src\channel\GameC.cpp" />
+    <ClCompile Include="src\channel\GameCF.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\protocol\GameMsg.cpp" />
+    <ClCompile Include="src\protocol\GameMsg.protoc.pb.cc" />
+    <ClCompile Include="src\protocol\GameMsgF.cpp" />
+    <ClCompile Include="src\protocol\GameMsgData.cpp" />
+    <ClCompile Include="src\protocol\GameMsgList.cpp" />
+    <ClCompile Include="src\protocol\GameP.cpp" />
+    <ClCompile Include="src\role\GameR.cpp" />
+  </ItemGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Link>
+      <LibraryDependencies>zinx;pthread;protobuf</LibraryDependencies>
+      <AdditionalOptions>-pthread %(AdditionalOptions)</AdditionalOptions>
+    </Link>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
