网格法AOI类测试成功

--- a/06day/01网格法AOI类设计/01网格法AOI类设计.vcxproj.filters
+++ b/06day/01网格法AOI类设计/01网格法AOI类设计.vcxproj.filters
@@ -12,9 +12,18 @@
     <ClInclude Include="inc\AOI.h">
       <Filter>inc</Filter>
     </ClInclude>
+    <ClInclude Include="inc\test.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AOI.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\test.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
